clap_derive/tests/ui/bool_required.stderr
error: required is meaningless for bool
  --> $DIR/bool_required.rs:14:19
   |
14 |     #[clap(short, required = true)]
   |                   ^^^^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/bool_required.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
